# vala-editor

./: Makefile.am  README  configure.ac
src/: Document.vala  DocumentManager.vala  Engine.vala  Locator.vala  Makefile.am  Provider.vala  Window.vala  main.vala
